--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Parallax Website</title>
+    <title>The ultimate frozen snack from Honduras!</title>
     <style>
         * {
             margin: 0;
@@ -60,15 +60,15 @@
         }
 
         .section1 {
-            background-image: url('https://picsum.photos/1920/1080?random=1');
+            background-image: url('https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/481147635_122100213056788144_252956206160870100_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=uNpR8lbMthoQ7kNvgFWcdLC&_nc_oc=AdiXscIWYf8WMaholwrIKAZaUTCV17m846IMvVyPQHJBPP0P9tterSqJT_WiJ2YLA0ecqaMFuVn-om6pslI_HWTy&_nc_zt=23&_nc_ht=scontent-iad3-2.xx&_nc_gid=AL32zvMAHLFQMQoddiApdtb&oh=00_AYANbmfWGi5qMpEdvFd45KE1cRYWbC77E3KFu_Bamfif1A&oe=67CEF3A0');
         }
 
         .section2 {
-            background-image: url('https://picsum.photos/1920/1080?random=2');
+            background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481224988_122103381554788144_3758171466406026658_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_ohc=OACE15PFTYoQ7kNvgGL5HlH&_nc_oc=AdjPYacBjDQHJNpddX6pG434UPgXdzJYHuG5qUZI5SeUFdpWnIRLjViQRcObWso6zlxqX6aloCpRlMBxlBa7Lk4L&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=Ac5twwD9b5-A3Sqw7ZTg1Be&oh=00_AYDNujkDGgo4O_jpDN9CsVJa0hBpAJT6btdieeG5TY1YBg&oe=67CEF6C6');
         }
 
         .section3 {
-            background-image: url('https://picsum.photos/1920/1080?random=3');
+            background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481265542_122103381548788144_2439754144633299739_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=2Jv3Lof3zgIQ7kNvgGyc98p&_nc_oc=Adh4HVKpMyMrEF08FgXNtIkpibWL2LBage6IWSiLLTJn5dlZHbpOam7eDG0B3ngXqMkZ_K5x_7QVs0lwMT5nOvRK&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=ACbfvk6CSAX3x9jbsMrByTc&oh=00_AYBXEwUrebSYBuUopyBlcVso9ajcO0Swom9TOo1B_3m0wg&oe=67CF15F1');
         }
 
         .content {
@@ -127,11 +127,11 @@
     <!-- Header -->
     <header>
         <nav>
-            <h2>Your Logo</h2>
+            <h2>Fruit Nuggs Honduras</h2>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#our Process">About</a></li>
+                <li><a href="#get-yours">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -139,33 +139,33 @@
     <!-- Parallax Sections -->
     <div class="parallax section1" id="home">
         <div class="content">
-            <h1>Welcome</h1>
-            <p>This is the first section of your parallax website</p>
+            <h1>Fruit Nuggs</h1>
+            <p>Chill bites with spicy-sour magic! Frozen mango, pineapple, grapes from Honduras—taste the SpiceFrost Fusion!</p>
         </div>
     </div>
 
     <div class="parallax section2" id="about">
         <div class="content">
-            <h1>About Us</h1>
-            <p>Learn more about what we do</p>
+            <h1>From Harvest to Hand</h1>
+            <p>Hand-picked in Honduras, cubed to perfection, and coated with tajín-inspired magic—delivered fresh to you!</p>
         </div>
     </div>
 
     <div class="parallax section3" id="contact">
         <div class="content">
-            <h1>Contact</h1>
-            <p>Get in touch with us</p>
+            <h1>Get Yours</h1>
+            <p>Grab your 8oz cup of Fruit Nuggs today—spicy, sour, and ready to enjoy! #FRUITNUGGS </p>
         </div>
     </div>
 
     <!-- Buy Now Button -->
-    <button class="buy-now" onclick="window.location.href='https://your-buy-now-link.com'">
+    <button class="Ordena Ahora" onclick="window.location.href='https://your-buy-now-link.com'">
         Buy Now
     </button>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Your Website. All rights reserved.</p>
+        <p>&copy; 2025 FruitNuggs. All rights reserved.</p>
     </footer>
 
     <script>
