--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
 
         .section1 {
-            background-image: url('https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/481147635_122100213056788144_252956206160870100_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=uNpR8lbMthoQ7kNvgFWcdLC&_nc_oc=AdiXscIWYf8WMaholwrIKAZaUTCV17m846IMvVyPQHJBPP0P9tterSqJT_WiJ2YLA0ecqaMFuVn-om6pslI_HWTy&_nc_zt=23&_nc_ht=scontent-iad3-2.xx&_nc_gid=AL32zvMAHLFQMQoddiApdtb&oh=00_AYANbmfWGi5qMpEdvFd45KE1cRYWbC77E3KFu_Bamfif1A&oe=67CEF3A0');
+            background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481240205_122104708496788144_7861009559523656818_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_ohc=HMYuE5V7OfcQ7kNvgGRFxVc&_nc_oc=AdhVUGaEBB2qHzaOyMnHEmROhUMnEO8A-WoYtiZm8Ta2_hCbshpMem6-TojJe7HkbxIOzuFLVEqbJtDXnlHJvpMd&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFOu504uPotz9k5IUszDL8t&oh=00_AYAODXtLDP160OxkjMnZ8AJWyM1QGMZeVLOuxQ3RfsPrXA&oe=67CF14D8');
         }
 
         .section2 {
@@ -159,7 +159,7 @@
     </div>
 
     <!-- Buy Now Button -->
-    <button class="Ordena Ahora" onclick="window.location.href='https://your-buy-now-link.com'">
+    <button class="Buy Now" onclick="window.location.href='https://your-buy-now-link.com'">
         Buy Now
     </button>
 
