--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             <h2>Fruit Nuggs Honduras</h2>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#our Process">About</a></li>
-                <li><a href="#get-yours">Contact</a></li>
+                <li><a href="#About">process</a></li>
+                <li><a href="#Contact">Get Yours</a></li>
             </ul>
         </nav>
     </header>
@@ -158,10 +158,8 @@
         </div>
     </div>
 
-    <!-- Buy Now Button -->
-    <button class="Buy Now" onclick="window.location.href='https://your-buy-now-link.com'">
-        Buy Now
-    </button>
+<!-- Buy Now Button -->
+<button class="buy-now" onclick="window.location.href='https://your-buy-now-link.com'">Ordena Ahora</button>
 
     <!-- Footer -->
     <footer>
