--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <h2>Fruit Nuggs Honduras</h2>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#About">process</a></li>
+                <li><a href="#About">Process</a></li>
                 <li><a href="#Contact">Get Yours</a></li>
             </ul>
         </nav>
