--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             text-decoration: none;
         }
 
+        .logo {
+            height: 50px;
+        }
+
         /* Parallax Sections */
         .parallax {
             height: 100vh;
@@ -79,6 +83,25 @@
             border-radius: 10px;
         }
 
+        /* Moving Banner */
+        .marquee {
+            background: #ff4444;
+            color: white;
+            padding: 10px 0;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+
+        .marquee span {
+            display: inline-block;
+            animation: marquee 15s linear infinite;
+        }
+
+        @keyframes marquee {
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
+        }
+
         /* Buy Now Button */
         .buy-now {
             position: fixed;
@@ -103,7 +126,35 @@
             background: #333;
             color: white;
             padding: 2rem;
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .footer-content {
+            width: 100%;
+            max-width: 1200px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .footer-logo {
+            height: 40px;
+            margin-bottom: 1rem;
+        }
+
+        .footer-left {
+            text-align: left;
+        }
+
+        .footer-right {
+            text-align: right;
+        }
+
+        .footer-right a {
+            color: white;
+            text-decoration: none;
         }
 
         /* Responsive Design */
@@ -120,6 +171,15 @@
             .buy-now {
                 padding: 10px 20px;
             }
+
+            .footer-content {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .footer-right {
+                margin-top: 1rem;
+            }
         }
     </style>
 </head>
@@ -127,21 +187,25 @@
     <!-- Header -->
     <header>
         <nav>
-            <h2>Fruit Nuggs Honduras</h2>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#About">Process</a></li>
-                <li><a href="#Contact">Get Yours</a></li>
+                <li><a href="#about">Process</a></li>
+                <li><a href="#contact">Get Yours</a></li>
             </ul>
+            <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_oc=AdjEZV9GgKRre0hwlMd-wD_J0_jyCo-AfRvKKAyz8eSUakuuoDNoz-gf_OAohNeZsjt2EXZgcBCbHM5QIY7ZjN6e&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFKodEuBhglwQ4DiOqiDGC9&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="logo">
         </nav>
     </header>
 
     <!-- Parallax Sections -->
     <div class="parallax section1" id="home">
         <div class="content">
-            <h1>Fruit Nuggs</h1>
-            <p>Chill bites with spicy-sour magic! Frozen mango, pineapple, grapes from Honduras—taste the SpiceFrost Fusion!</p>
+            <h1>Chill Bites with a Kick</h1>
+            <p>Spicy-sour magic! Frozen mango, pineapple, grapes from Honduras—taste the SpiceFrost Fusion!</p>
         </div>
+    </div>
+
+    <div class="marquee">
+        <span>Spicy Fruit Nuggs - Fresh from Honduras - Taste the Fusion - #FRUITNUGGS</span>
     </div>
 
     <div class="parallax section2" id="about">
@@ -151,6 +215,10 @@
         </div>
     </div>
 
+    <div class="marquee">
+        <span>Spicy Fruit Nuggs - Fresh from Honduras - Taste the Fusion - #FRUITNUGGS</span>
+    </div>
+
     <div class="parallax section3" id="contact">
         <div class="content">
             <h1>Get Yours</h1>
@@ -158,12 +226,21 @@
         </div>
     </div>
 
-<!-- Buy Now Button -->
-<button class="buy-now" onclick="window.location.href='https://your-buy-now-link.com'">Ordena Ahora</button>
+    <!-- Buy Now Button -->
+    <button class="buy-now" onclick="window.location.href='https://your-buy-now-link.com'">Ordena Ahora</button>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 FruitNuggs. All rights reserved.</p>
+        <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_oc=AdjEZV9GgKRre0hwlMd-wD_J0_jyCo-AfRvKKAyz8eSUakuuoDNoz-gf_OAohNeZsjt2EXZgcBCbHM5QIY7ZjN6e&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFKodEuBhglwQ4DiOqiDGC9&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="footer-logo">
+        <div class="footer-content">
+            <div class="footer-left">
+                <p>© 2025 FruitNuggs. All rights reserved.</p>
+            </div>
+            <div class="footer-right">
+                <p>Got questions? Reach out via e-mail at:</p>
+                <a href="mailto:FruitNuggs@gmail.com">FruitNuggs@gmail.com</a>
+            </div>
+        </div>
     </footer>
 
     <script>
