--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         /* Moving Banner */
         .marquee {
-            background: #ff4444;
+            background: #000000;
             color: white;
             padding: 10px 0;
             overflow: hidden;
