--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         body {
             font-family: Arial, sans-serif;
             overflow-x: hidden;
+            background: #000;
         }
 
         /* Fixed Header with Curvy Line */
@@ -55,17 +56,31 @@
             left: 50%;
             transform: translateX(-50%);
             top: 50%;
-            margin-top: -40px; /* Half of height to center vertically */
+            margin-top: -40px;
             z-index: 3;
-            background: rgba(0, 0, 0, 0.8); /* Match header background */
+            background: rgba(0, 0, 0, 0.8);
             padding: 5px;
             border-radius: 10px;
+        }
+
+        /* Hamburger Menu */
+        .hamburger {
+            display: none;
+            font-size: 24px;
+            background: none;
+            border: none;
+            color: white;
+            cursor: pointer;
+            z-index: 4;
+        }
+
+        #menu-toggle {
+            display: none;
         }
 
         /* Parallax Sections */
         .parallax {
             height: 100vh;
-            background-attachment: fixed;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -97,11 +112,13 @@
 
         /* Moving Banner */
         .marquee {
-            background: #ff4444;
+            background: #000;
             color: white;
             padding: 10px 0;
             overflow: hidden;
             white-space: nowrap;
+            position: relative;
+            z-index: 1;
         }
 
         .marquee span {
@@ -133,7 +150,7 @@
             transform: scale(1.1);
         }
 
-        /* Footer with Curvy Bottom */
+        /* Footer with Curvy Top and Bottom */
         footer {
             background: #333;
             color: white;
@@ -141,7 +158,7 @@
             display: flex;
             justify-content: center;
             position: relative;
-            clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
+            clip-path: polygon(0 20%, 50% 0, 100% 20%, 100% 80%, 50% 100%, 0 80%);
         }
 
         .footer-content {
@@ -180,9 +197,25 @@
 
         /* Responsive Design */
         @media (max-width: 768px) {
+            /* Hamburger Menu */
+            .hamburger {
+                display: block;
+            }
+
             nav ul {
+                display: none;
                 flex-direction: column;
-                gap: 1rem;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 100%;
+                background: rgba(0, 0, 0, 0.9);
+                padding: 1rem;
+                z-index: 3;
+            }
+
+            #menu-toggle:checked ~ ul {
+                display: flex;
             }
 
             .logo {
@@ -192,7 +225,11 @@
             }
 
             header {
-                clip-path: none; /* Disable curve on mobile for simplicity */
+                clip-path: none;
+            }
+
+            .parallax {
+                background-attachment: scroll;
             }
 
             .content {
@@ -212,13 +249,28 @@
                 align-items: center;
             }
 
+            .footer-logo {
+                height: 60px; /* Increased size for mobile */
+            }
+
             .footer-right {
                 margin-top: 1rem;
                 align-items: center;
             }
 
             footer {
-                clip-path: none; /* Disable curve on mobile for simplicity */
+                clip-path: none;
+            }
+
+            .marquee {
+                font-size: 14px;
+            }
+        }
+
+        /* Ensure parallax works on desktop */
+        @media (min-width: 769px) {
+            .parallax {
+                background-attachment: fixed;
             }
         }
     </style>
@@ -227,6 +279,8 @@
     <!-- Header -->
     <header>
         <nav>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="hamburger">☰</label>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Process</a></li>
@@ -291,17 +345,20 @@
                 document.querySelector(this.getAttribute('href')).scrollIntoView({
                     behavior: 'smooth'
                 });
+                // Close hamburger menu after clicking a link on mobile
+                document.getElementById('menu-toggle').checked = false;
             });
         });
 
-        // Parallax effect adjustment for mobile
+        // Parallax effect adjustment
         function adjustParallax() {
+            const parallaxSections = document.querySelectorAll('.parallax');
             if (window.innerWidth <= 768) {
-                document.querySelectorAll('.parallax').forEach(section => {
+                parallaxSections.forEach(section => {
                     section.style.backgroundAttachment = 'scroll';
                 });
             } else {
-                document.querySelectorAll('.parallax').forEach(section => {
+                parallaxSections.forEach(section => {
                     section.style.backgroundAttachment = 'fixed';
                 });
             }
