--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     </div>
 
     <!-- Buy Now Button -->
-    <button class="buy-now" onclick="window.location.href='https://your-buy-now-link.com'">Ordena Ahora</button>
+    <button class="buy-now" onclick="window.location.href='https://fruitnuggs.zobaze.shop'">Ordena Ahora</button>
 
     <!-- Footer -->
     <footer>
