--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     </div>
 
     <div class="marquee">
-        <span>Spicy Fruit Nuggs - Fresh from Honduras - Taste the Fusion - #FRUITNUGGS Mango congelado 🥭❄️, piña 🍍❄️, uvas 🍇❄️, y fresa 🍓❄️—¡Con un toque mágico!</span>
+        <span>#FRUITNUGGS Mango congelado 🥭❄️, piña 🍍❄️, uvas 🍇❄️, y fresa 🍓❄️—¡Con un toque mágico!</span>
     </div>
 
     <div class="parallax section3" id="contact">
