--- a/index.html
+++ b/index.html
@@ -332,12 +332,12 @@
                 <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_oc=AdjEZV9GgKRre0hwlMd-wD_J0_jyCo-AfRvKKAyz8eSUakuuoDNoz-gf_OAohNeZsjt2EXZgcBCbHM5QIY7ZjN6e&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFKodEuBhglwQ4DiOqiDGC9&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="footer-logo">
                 <p>© 2025 FruitNuggs. All rights reserved.</p>
             </div>
+            <div style="text-align: center; margin: 0 auto;">
+                <p><a href="https://forms.gle/Bf7LBrZBK78XTUgXA" target="_blank" style="color: white; text-decoration: underline;">Interested in wholesale? Click here</a></p>
+            </div>
             <div class="footer-right">
                 <p>Got questions? Reach out via e-mail at:</p>
                 <a href="mailto:FruitNuggs@gmail.com">FruitNuggs@gmail.com</a>
-                <div style="margin-top: 15px;">
-                    <a href="https://forms.gle/Bf7LBrZBK78XTUgXA" target="_blank" style="display: inline-block; background-color: #ff4444; color: white; padding: 8px 15px; border-radius: 25px; text-decoration: none; font-weight: bold;">Become a Wholesaler</a>
-                </div>
             </div>
         </div>
     </footer>
