--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             background: rgba(0, 0, 0, 0.8);
             padding: 5px;
             border-radius: 10px;
+            display: block; /* Ensure logo renders */
         }
 
         .hamburger {
@@ -161,13 +162,20 @@
             z-index: 1;
         }
 
-        .footer-content {
+        .footer-container {
             width: 100%;
             max-width: 1200px;
             margin: 0 auto;
             display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .footer-content {
+            width: 100%;
+            display: flex;
             justify-content: space-between;
-            align-items: flex-end; /* Align all items to bottom on desktop */
+            align-items: flex-start; /* Reset to flex-start for proper positioning */
         }
 
         .footer-left {
@@ -175,19 +183,20 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            justify-content: flex-end; /* Push content to bottom */
+            margin-bottom: 20px; /* Align with wholesale-link’s margin-top */
         }
 
         .footer-logo {
             height: 40px;
             margin-bottom: 1rem;
+            display: block; /* Ensure logo renders */
         }
 
         .footer-right {
             text-align: right;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end; /* Push content to bottom */
+            justify-content: flex-end; /* Keep right aligned to bottom */
         }
 
         .footer-right a {
@@ -243,7 +252,7 @@
                 clip-path: none;
             }
 
-            /* Mobile: Hide parallax backgrounds and use fixed container */
+            /* Mobile: Use fixed background container */
             .parallax {
                 background-image: none !important; /* Remove individual backgrounds */
             }
@@ -267,11 +276,12 @@
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
-                display: none; /* Hidden by default */
+                opacity: 0;
+                transition: opacity 0.5s ease-in-out; /* Smooth fade */
             }
 
             .mobile-background div.active {
-                display: block; /* Show active image */
+                opacity: 1;
             }
 
             .content {
@@ -293,6 +303,7 @@
                 align-items: center;
                 width: 100%;
                 justify-content: center;
+                margin-bottom: 0; /* Reset for mobile */
             }
 
             footer {
@@ -311,7 +322,7 @@
         /* Desktop Parallax */
         @media (min-width: 769px) {
             .parallax {
-                background-attachment: fixed; /* Desktop: original parallax */
+                background-attachment: fixed;
             }
         }
     </style>
@@ -373,18 +384,20 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-content">
-            <div class="footer-left">
-                <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_oc=AdjEZV9GgKRre0hwlMd-wD_J0_jyCo-AfRvKKAyz8eSUakuuoDnoZ-gf_OAohNeZsjt2EXZgcBCbHM5QIY7ZjN6e&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFKodEuBhglwQ4DiOqiDGC9&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="footer-logo">
-                <p>© 2025 FruitNuggs. All rights reserved.</p>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-left">
+                    <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_oc=AdjEZV9GgKRre0hwlMd-wD_J0_jyCo-AfRvKKAyz8eSUakuuoDnoZ-gf_OAohNeZsjt2EXZgcBCbHM5QIY7ZjN6e&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFKodEuBhglwQ4DiOqiDGC9&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="footer-logo">
+                    <p>© 2025 FruitNuggs. All rights reserved.</p>
+                </div>
+                <div class="footer-right">
+                    <p>Got questions? Reach out via e-mail at:</p>
+                    <a href="mailto:FruitNuggs@gmail.com">FruitNuggs@gmail.com</a>
+                </div>
             </div>
-            <div class="footer-right">
-                <p>Got questions? Reach out via e-mail at:</p>
-                <a href="mailto:FruitNuggs@gmail.com">FruitNuggs@gmail.com</a>
+            <div class="wholesale-link">
+                <a href="https://forms.gle/Bf7LBrZBK78XTUgXA" target="_blank">Interested in wholesale? Click here</a>
             </div>
-        </div>
-        <div class="wholesale-link">
-            <a href="https://forms.gle/Bf7LBrZBK78XTUgXA" target="_blank">Interested in wholesale? Click here</a>
         </div>
     </footer>
 
@@ -401,21 +414,37 @@
             });
         });
 
-        // Mobile background switching
+        // Mobile background fading
         function updateMobileBackground() {
+            if (window.innerWidth > 768) return; // Skip on desktop
+
             const sections = document.querySelectorAll('.parallax');
             const backgroundImages = document.querySelectorAll('.mobile-background div');
-            const scrollPosition = window.scrollY + window.innerHeight / 2;
+            const scrollPosition = window.scrollY;
+            const windowHeight = window.innerHeight;
 
-            sections.forEach(section => {
+            sections.forEach((section, index) => {
                 const sectionTop = section.offsetTop;
                 const sectionBottom = sectionTop + section.offsetHeight;
-                const sectionId = section.id;
+                const nextSectionTop = index < sections.length - 1 ? sections[index + 1].offsetTop : document.body.scrollHeight;
 
-                if (scrollPosition >= sectionTop && scrollPosition < sectionBottom) {
-                    backgroundImages.forEach(img => {
-                        img.classList.toggle('active', img.dataset.section === sectionId);
-                    });
+                if (scrollPosition >= sectionTop - windowHeight / 2 && scrollPosition < nextSectionTop - windowHeight / 2) {
+                    const progress = (scrollPosition - (sectionTop - windowHeight / 2)) / (section.offsetHeight + windowHeight);
+                    const currentImg = backgroundImages[index];
+                    const nextImg = backgroundImages[index + 1] || backgroundImages[index];
+
+                    // Reset all opacities
+                    backgroundImages.forEach(img => img.classList.remove('active'));
+
+                    // Set current image opacity
+                    currentImg.classList.add('active');
+                    currentImg.style.opacity = Math.max(1 - progress, 0);
+
+                    // Fade in next image if applicable
+                    if (nextImg !== currentImg) {
+                        nextImg.classList.add('active');
+                        nextImg.style.opacity = Math.min(progress, 1);
+                    }
                 }
             });
         }
@@ -431,7 +460,7 @@
 
         // Only run on mobile
         if (window.innerWidth <= 768) {
-            const debouncedUpdate = debounce(updateMobileBackground, 50);
+            const debouncedUpdate = debounce(updateMobileBackground, 10);
             window.addEventListener('scroll', debouncedUpdate);
             window.addEventListener('load', updateMobileBackground);
             window.addEventListener('resize', debouncedUpdate);
