--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
             background: rgba(0, 0, 0, 0.8);
             padding: 5px;
             border-radius: 10px;
-            display: block; /* Ensure logo renders */
         }
 
         .hamburger {
@@ -175,7 +174,7 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
-            align-items: flex-start; /* Reset to flex-start for proper positioning */
+            align-items: flex-start;
         }
 
         .footer-left {
@@ -189,14 +188,13 @@
         .footer-logo {
             height: 40px;
             margin-bottom: 1rem;
-            display: block; /* Ensure logo renders */
         }
 
         .footer-right {
             text-align: right;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end; /* Keep right aligned to bottom */
+            justify-content: flex-end;
         }
 
         .footer-right a {
@@ -218,7 +216,7 @@
 
         /* Mobile Background Container */
         .mobile-background {
-            display: none; /* Hidden on desktop */
+            display: none;
         }
 
         @media (max-width: 768px) {
@@ -252,9 +250,8 @@
                 clip-path: none;
             }
 
-            /* Mobile: Use fixed background container */
             .parallax {
-                background-image: none !important; /* Remove individual backgrounds */
+                background-image: none !important;
             }
 
             .mobile-background {
@@ -277,7 +274,7 @@
                 background-repeat: no-repeat;
                 background-size: cover;
                 opacity: 0;
-                transition: opacity 0.5s ease-in-out; /* Smooth fade */
+                transition: opacity 0.5s ease-in-out;
             }
 
             .mobile-background div.active {
@@ -303,7 +300,7 @@
                 align-items: center;
                 width: 100%;
                 justify-content: center;
-                margin-bottom: 0; /* Reset for mobile */
+                margin-bottom: 0;
             }
 
             footer {
@@ -319,7 +316,6 @@
             }
         }
 
-        /* Desktop Parallax */
         @media (min-width: 769px) {
             .parallax {
                 background-attachment: fixed;
@@ -338,7 +334,7 @@
                 <li><a href="#about">Process</a></li>
                 <li><a href="#contact">Get Yours</a></li>
             </ul>
-            <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_oc=AdjEZV9GgKRre0hwlMd-wD_J0_jyCo-AfRvKKAyz8eSUakuuoDnoZ-gf_OAohNeZsjt2EXZgcBCbHM5QIY7ZjN6e&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFKodEuBhglwQ4DiOqiDGC9&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="logo">
+            <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_ht=scontent-iad3-1.xx&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="logo">
         </nav>
     </header>
 
@@ -387,7 +383,7 @@
         <div class="footer-container">
             <div class="footer-content">
                 <div class="footer-left">
-                    <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_oc=AdjEZV9GgKRre0hwlMd-wD_J0_jyCo-AfRvKKAyz8eSUakuuoDnoZ-gf_OAohNeZsjt2EXZgcBCbHM5QIY7ZjN6e&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFKodEuBhglwQ4DiOqiDGC9&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="footer-logo">
+                    <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_ht=scontent-iad3-1.xx&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="footer-logo">
                     <p>© 2025 FruitNuggs. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
@@ -416,7 +412,7 @@
 
         // Mobile background fading
         function updateMobileBackground() {
-            if (window.innerWidth > 768) return; // Skip on desktop
+            if (window.innerWidth > 768) return;
 
             const sections = document.querySelectorAll('.parallax');
             const backgroundImages = document.querySelectorAll('.mobile-background div');
@@ -433,14 +429,11 @@
                     const currentImg = backgroundImages[index];
                     const nextImg = backgroundImages[index + 1] || backgroundImages[index];
 
-                    // Reset all opacities
                     backgroundImages.forEach(img => img.classList.remove('active'));
 
-                    // Set current image opacity
                     currentImg.classList.add('active');
                     currentImg.style.opacity = Math.max(1 - progress, 0);
 
-                    // Fade in next image if applicable
                     if (nextImg !== currentImg) {
                         nextImg.classList.add('active');
                         nextImg.style.opacity = Math.min(progress, 1);
@@ -449,7 +442,6 @@
             });
         }
 
-        // Debounce for performance
         function debounce(func, wait) {
             let timeout;
             return function() {
@@ -458,7 +450,6 @@
             };
         }
 
-        // Only run on mobile
         if (window.innerWidth <= 768) {
             const debouncedUpdate = debounce(updateMobileBackground, 10);
             window.addEventListener('scroll', debouncedUpdate);
