--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://cdn.countvisits.com/script.js" data-website-id="dba6df0d-7f15-4617-b8ea-3440fde9c4da"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The ultimate frozen snack from Honduras!</title>
